# Untranslocator-rs

./: .gitignore  Cargo.toml  License.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
Untranslocator.Lib/: build-lib.sh
Untranslocator.Lib/Untranslocator/: untranslocator_c.h  untranslocator_c.m
Untranslocator.Lib/Untranslocator.xcodeproj/: project.pbxproj
examples/: resolve_translocated_path.rs
scripts/: sync-cargo-version.py
src/: lib.rs
tests/: integration_macos.rs
