[package]
name = "untranslocator"
version = "0.1.1"
edition = "2021"
description = "Untranslocator allows to get the original bundle path from a translocated macOS app."
license = "MIT"
readme = "README.md"
authors = ["Nikitalita"]
repository = "https://github.com/nikitalita/Untranslocator-rs"
keywords = ["macos", "path", "security", "translocation"]
categories = ["api-bindings", "os::macos-apis"]
build = "build.rs"

[lib]
name = "untranslocator"
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"
